Fixed bug #76755 (setcookie does not accept "double" type for expire time)